<resources>
    <string name="app_name">Instamojo Android SDK</string>
    <string name="status_bar">Status bar replacement</string>
    <string name="card_number">Card Number</string>
    <string name="date_hint">Expiry MM/YY</string>
    <string name="name_on_card">Name on Card</string>
    <string name="cvv_hint">CVV</string>
    <string name="checkout">Checkout</string>
    <string name="error_message_juspay">Failed to initiate Payment. Please try again!</string>
    <string name="please_wait">please wait…</string>
    <string name="title_fragment_choose_payment_option">Choose a Payment Option</string>
    <string name="title_fragment_credit_card_form">Credit Card</string>
    <string name="title_fragment_debit_card_form">Debit Card</string>
    <string name="title_fragment_emi_form">EMI</string>
    <string name="title_fragment_upi">Enter VPA</string>
    <string name="choose_your_bank">Choose your Bank</string>
    <string name="choose_your_wallet">Choose your Wallet</string>
    <string name="search_your_bank">Search your Bank</string>
    <string name="search_your_wallet">Search your Wallet</string>
    <string name="brand_trust_logos">Brand trust logos</string>
    <string name="choose_your_credit_card">Choose your Credit Card</string>
    <string name="choose_an_emi_option">Choose an EMI Option</string>
    <string name="emi_on_credit_card">EMI on Credit Card</string>
    <string name="wallets">Wallets</string>
    <string name="net_banking">Net Banking</string>
    <string name="upi">UPI</string>
    <string name="enter_your_virtual_payment_address">Enter your virtual payment address</string>
    <string name="example_mohit_icici">Example: mohit@icici</string>
    <string name="verify_payment">Verify Payment</string>
    <string name="verify_payment_image_description">Verify Payment Image</string>
    <string name="waiting">Waiting…</string>
    <string name="complete_payment_description">You will receive a notification on your Bank UPI app.\nPlease confirm it to complete the payment.</string>
</resources>
