<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:paddingLeft="@dimen/margin_16"
    android:paddingRight="@dimen/margin_16"
    tools:context=".activities.PaymentDetailsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pre_vpa_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="true"
        android:layout_marginTop="@dimen/margin_16">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/virtual_address_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_virual_payment_address"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            app:met_errorColor="@android:color/holo_red_light"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/edit_text_color"
            app:met_textColor="@android:color/black"
            app:met_validateOnFocusLost="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_mohit_icici"
            android:textSize="16sp"
            android:textColor="@color/base_dark"
            android:layout_marginTop="2dp"/>

        <Button
            android:id="@+id/verify_payment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_instamojo"
            android:gravity="center"
            android:text="@string/verify_payment"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/post_vpa_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="true"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_verify_payment"
            android:contentDescription="@string/verify_payment_image_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiting"
            android:textSize="16sp"
            android:textColor="@color/accent_color"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_payment_description"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/base_dark"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</LinearLayout>